examples/failing/modules/parent.cz
import ./first

print(first.foo);
